Fix markup and added js

--- a/css/blocks/_input.scss
+++ b/css/blocks/_input.scss
@@ -4,6 +4,8 @@
   outline: none;
   border: 1px solid #ccc;
   border-radius: 5px;
+  font-family: sans-serif;
+  font-size: 14px;
 
   &:focus {
     outline: none;
