--- a/css/blocks/_results.scss
+++ b/css/blocks/_results.scss
@@ -1,17 +1,23 @@
 .results {
   &__wrapper {
     margin: -10px 0;
+    padding: 0;
+    list-style: none;
   }
 
   &__item {
     display: block;
     margin: 10px 0;
     width: 100%;
+
+    img {
+      width: 100%;
+    }
   }
 
   &__btn {
-    display: block;
-    margin: 50px auto 0;
+    margin: 50px auto;
+    text-align: center;
   }
 
   @include mq(375px) {
